infrastructure/linkerd/habitcentric/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-to-ui
  namespace: hc-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: /ui
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: habitcentric.demo
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: ui
                port:
                  number: 9004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habit-ingress
  namespace: hc-habit
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: habitcentric.demo
    http:
      paths:
      - path: /habits
        pathType: Prefix
        backend:
          service:
            name: habit
            port:
              number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habit-ingress-actuator
  namespace: hc-habit
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /actuator$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: habitcentric.demo
      http:
        paths:
          - path: /habits/actuator(.*)
            pathType: Prefix
            backend:
              service:
                name: habit
                port:
                  number: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: track-ingress
  namespace: hc-track
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: habitcentric.demo
    http:
      paths:
      - path: /track
        pathType: Prefix
        backend:
          service:
            name: track
            port:
              number: 9002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: track-ingress-actuator
  namespace: hc-track
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /actuator$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: habitcentric.demo
      http:
        paths:
          - path: /track/actuator(.*)
            pathType: Prefix
            backend:
              service:
                name: track
                port:
                  number: 9002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-ingress
  namespace: hc-report
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: habitcentric.demo
    http:
      paths:
      - path: /report
        pathType: Prefix
        backend:
          service:
            name: report
            port:
              number: 9003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-ingress-actuator
  namespace: hc-report
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /actuator$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: habitcentric.demo
      http:
        paths:
          - path: /report/actuator(.*)
            pathType: Prefix
            backend:
              service:
                name: report
                port:
                  number: 9003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: hc-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: habitcentric.demo
    http:
      paths:
      - path: /ui
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 9004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: hc-keycloak
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: habitcentric.demo
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak-keycloakx-http
            port:
              number: 8080
